commit estudo diário

--- a/Java Script/Java Script Advanced/Js objects/HTML para Linkar .html
+++ b/Java Script/Java Script Advanced/Js objects/HTML para Linkar .html
@@ -17,6 +17,6 @@
 
 
 
- <script src="../Js objects/aula7 Herança.js"></script>   
+ <script src="../Js objects/aula9 factory functions+ prototypes.js"></script>   
 </body>
 </html>
